# python-package_root

./: README.md  pyproject.toml
.github/workflows/: test.yml
package_root/: __init__.py
tests/: test_package_root.py
tests/your_awesome_package/foo/bar/: baz.ipynb  baz.py
